--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 
 </body>
-   <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-<body>
 
-</html>
+<section class="container principal">
+    <div>
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="" alt="O combo+ é a junção do alura+ e o alura língua">
+        <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somenete com alura+</a>
+    </div>
+</section>
